<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignMe</string>
    <string name="hello_world">Hello world!</string>

    <!-- LOGIN ACTIVITY -->
    <string name="email">email:</string>
    <string name="password">password:</string>
    <string name="login">log in</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register_button">Register.</string>
    <string name="email_invalid">Invalid email address.</string>
    <string name="no_password">Hey friend, you didn\'t enter your password :)</string>

    <!-- REGISTRATION ACTIVITY -->
    <string name="full_name">full name:</string>
    <string name="password_again">password again:</string>
    <string name="register">register</string>
    <string name="enter_your_students_email">Make sure to enter your student\'s email address.</string>
    <string name="agree_to_the_terms">By registering you agree to the</string>
    <string name="terms_button">terms of service.</string>
    <string name="all_fields_mandatory">All fields are mandatory.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="password_too_short">Please choose a password which has at least 6 characters.</string>

    <!-- EMAIL SENT ACTIVITY -->
    <string name="confirmation_email_sent">A confirmation email has been sent to your address.</string>
    <string name="click_on_the_confirmation_link">Please click on the confirmation link to activate your account.</string>
    <string name="reload_button">reload</string>

    <!-- EMAIL ALREADY SENT ACTIVITY -->
    <string name="confirmation_email_already_sent">A confirmation email has already been sent to your address.</string>
    <string name="havent_received_email">If you haven\'t received one yet, tap Resend and we\'ll send you a new one right away.</string>
    <string name="resend_button">resend</string>
    
    <!-- ACCOUNT NOT ACTIVATED ACTIVITY -->
    <string name="account_not_activated">Your account has not yet been activated.</string>
    <string name="havent_received_confirmation_email">If you haven\'t received a confirmation email, tap Resend and we\'ll send you a new one right away.</string>

    <!-- ACCOUNT ACTIVATED ACTIVITY -->
    <string name="account_has_been_activated">Awesome! Your account has now been activated.</string>
    <string name="you_may_start">You may start using the app.</string>
    <string name="continue_button">continue</string>

    <!-- LECTURES ACTIVITY -->
    <string name="no_active_lectures">There are no active lectures at the moment.</string>
    <string name="create_lecture_button">create a lecture</string>
    
    <!-- LECTURE ACTIVITY -->
    <string name="starts_at">%1$s at %2$s o\'clock</string>
    <string name="sign_me">sign me!</string>
    <string name="no_signature_requests">There are no signature requests here at the moment. Ask for one!</string>
    <string name="signed">signed</string>
    <string name="undo">undo</string>
    <string name="plus_one">+1</string>
    
    <!-- MY PROFILE ACTIVITY -->
    <string name="change_password">change password</string>
    <string name="edit_btn">EDIT</string>
    <string name="name_label">Name:</string>
    <string name="password_label">Pswrd:</string>
    <string name="beer_label">Beers:</string>
    <string name="image_label">Image:</string>
    <string name="image_none">NONE</string>
    <string name="asterisks">******</string>
    
    <!-- TOP COMRADES ACTIVITY -->
    <string name="top_comrades">top comrades</string>
    <string name="earned_beers">earned %1$d beers</string>
    
    <!-- NO CONNECTION ACTIVITY -->
    <string name="no_connection">No Internet Connection.</string>
    <string name="please_connect">Please connect to the Internet to use SignMe App.</string>
    <string name="retry_button">retry</string>

    <!-- NEW LECTURE DIALOG -->
    <string name="new_lecture">new lecture:</string>
    <string name="starts">starts:</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="at_approx">at approx:</string>
    <string name="ends_at_approx">ends at approx:</string>
    <string name="o_clock">o\'clock</string>
    <string name="create">create</string>
    
    <!-- EDIT NAME DIALOG -->
    <string name="edit_name">edit name:</string>
    <string name="save">save</string>
    
    <!-- CHANGE PASSWORD DIALOG -->
    <string name="current_password">current password:</string>
    <string name="new_password">new password:</string>
    <string name="new_password_again">new password again:</string>
    <string name="submit">submit</string>
    
    <!-- SIGNATURE IMAGE DIALOG -->
    <string name="no_signature_image">THE USER HAS NO SIGNATURE IMAGE.</string>
    
    <!-- TOASTS -->
    <string name="lecture_created">Lecture successfully created.</string>
    <string name="name_changed">Name successfully changed.</string>
    <string name="password_changed">Password successfully changed.</string>
    <string name="you_asked">You asked for a signature.</string>
    <string name="not_enough_beer">You don\'t have any beers left.</string>
    <string name="minus_one">-1</string>
    <string name="image_uploaded">Image successfully uploaded.</string>
    <string name="image_not_uploaded">Error uploading an image.</string>
    
    <!-- PUSH NOTIFS -->
    <string name="you_have_been_signed">You\'ve been signed!</string>
    <string name="say_thanks">Say thanks to %1$s.</string>
    
    <!-- HOUR PICKER -->
    <string name="hour_08">8</string>
    <string name="hour_09">9</string>
    <string name="hour_10">10</string>
    <string name="hour_11">11</string>
    <string name="hour_12">12</string>
    <string name="hour_13">13</string>
    <string name="hour_14">14</string>
    <string name="hour_15">15</string>
    <string name="hour_16">16</string>
    <string name="hour_17">17</string>
    <string name="hour_18">18</string>
    <string name="hour_19">19</string>
    <string name="hour_20">20</string>
    <string name="hour_21">21</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="img_logo">App Logo</string>
    <string name="img_paper_plane">Paper Plane Icon</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_splash">Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_email_sent">Account Confirmation</string>
    <string name="title_activity_email_already_sent">Account Already Waiting Confirmation</string>
    <string name="title_activity_account_not_activated">Account Not Activated</string>
    <string name="title_activity_account_activated">Account Activated</string>
    <string name="title_activity_lectures">Lectures</string>
    <string name="title_activity_lecture">Lecture</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_no_connection">No Internet Connection</string>
	<string name="title_activity_top_comrades">Top Comrades</string>
    
    <!-- MENU -->
    <string name="settings">settings</string>
    <string name="logout">log out</string>

    <!-- API ERRORS -->
    <string name="error_50">User with this email address already exists.</string>
    <string name="error_51">A confirmation email has already been sent to this address.</string>
    <string name="error_60">Your account has not yet been activated.</string>
    <string name="error_61">Unable to login with provided credentials.</string>
    <string name="error_170">The current password you have entered is incorrect.</string>

</resources>