<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:padding="30dp"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/rl_content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="68dp" >

        <ImageView
            android:id="@+id/img_paper_plane"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_paper_plane"
            android:src="@drawable/wifi" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_paper_plane"
            android:textStyle="bold"
            android:text="@string/no_connection"
            android:textColor="@color/dark_gray_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:fontFamily="sans-serif-light"
            android:text="@string/please_connect"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_retry"
        style="@style/btnStyleRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/retry_button" />

</RelativeLayout>