<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:padding="30dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/signme_red"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rl_name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_error"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_name"
            android:layout_toRightOf="@id/txt_name"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName|textCapWords"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_name_container"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_email"
            android:layout_toRightOf="@id/txt_email"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_email_container"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_password"
            android:layout_toRightOf="@id/txt_password"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password_again_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_password_container"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/password_again"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_password_again"
            android:layout_toRightOf="@id/txt_password_again"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/btnStyleRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_password_again_container"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/register" />

    <RelativeLayout
        android:id="@+id/rl_terms_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/txt_agree_to_the_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/agree_to_the_terms"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_terms"
            style="@style/btnStyleTextLink"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/txt_agree_to_the_terms"
            android:text="@string/terms_button" />
    </RelativeLayout>

</RelativeLayout>