<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_yellow_background"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/txt_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_change_password"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/signme_red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_error"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/current_password"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_current_password"
        android:background="@drawable/edittext_bold_yellow_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_current_password"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_new_password"
        android:background="@drawable/edittext_bold_yellow_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_new_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_new_password"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/new_password_again"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_new_password_again"
        android:background="@drawable/edittext_bold_yellow_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingBottom="2dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/btnStyleWhiteYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_new_password_again"
        android:layout_marginTop="25dp"
        android:text="@string/submit" />

</RelativeLayout>